--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "ant-design-vue": "^1.7.8",
         "vue-router": "^3.5.2"
     }
 }
