--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "ant-design-vue": "^1.7.8",
+        "apexcharts": "^3.29.0",
+        "vue-apexcharts": "^1.6.2",
         "vue-router": "^3.5.2"
     }
 }
