--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "ant-design-vue": "^1.7.8",
         "apexcharts": "^3.29.0",
         "vue-apexcharts": "^1.6.2",
+        "vue-inputmask": "^0.2.1",
         "vue-router": "^3.5.2"
     }
 }
