--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "path": "^0.12.7",
         "vue-apexcharts": "^1.6.2",
         "vue-notification": "^1.3.20",
-        "vue-router": "^3.5.2"
+        "vue-router": "^3.5.2",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
