--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "apexcharts": "^3.29.0",
         "path": "^0.12.7",
         "vue-apexcharts": "^1.6.2",
+        "vue-i18n": "^8.26.7",
         "vue-notification": "^1.3.20",
         "vue-router": "^3.5.2",
         "vuejs-datepicker": "^1.6.2"
